--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                   </button>
 
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
                   <!-- <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD </b></a> -->
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
@@ -157,9 +157,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                
+
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">About</li>
                 </ol>
@@ -350,6 +350,102 @@ Supported by a knowledgeable, dedicated and passionate sales and support team, E
 
     </div>--->
     <!-- /.container -->
+
+
+<hr>
+    <div class="container-fluid" id="c2">
+     <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+    <!-- </div> -->
+
+      <div class="row color-blue">
+
+                  <!-- <div class="col-lg-12">
+                      <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                 </div> -->
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+                 </div>
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
+
+
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                    <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+                 </div>
+
+
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                    <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                    <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
+
+
+
+
+                 <!-- <div class="col-md-6">
+                     <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                 </div> -->
+             </div>
+             </div>
+
+             <!-- Footer -->
+             <footer>
+                 <div class="row">
+                     <div class="col-lg-12">
+                         <p>Copyright &copy; Your Website 2016</p>
+                     </div>
+                 </div>
+             </footer>
+
+           </div>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
