--- a/engineering.html
+++ b/engineering.html
@@ -12,8 +12,8 @@
     <title>Edtech Marine Services</title>
 
     <!-- Bootstrap Core CSS -->
-   <link href="css/bootstrap.min.css" rel="stylesheet">
-   <link href="css/style.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
@@ -36,62 +36,62 @@
 
 
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                  </button>
-                  <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
-                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
-              </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li>
-                          <a href="about.html">About</a>
-                      </li>
-                      <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="spares.html">Stores and Spares</a>
-                                </li>
-                                <li>
-                                    <a href="spares.html">Edtech Agency and Husbandry </a>
-                                </li>
-                                <li>
-                                    <a href="engineering.html">Edtech Engineering</a>
-                                </li>
-                                <li>
-                                    <a href="safety.html">Edtech Safety and Automation</a>
-                                </li>
-                                <li>
-                                    <a href="itservices.html">Edtech I.T Services</a>
-                                </li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
+                <!-- <img src="logo.png" alt="image1" id="logo"> -->
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="spares.html">Stores and Spares</a>
+                            </li>
+                            <li>
+                                <a href="spares.html">Edtech Agency and Husbandry </a>
+                            </li>
+                            <li>
+                                <a href="engineering.html">Edtech Engineering</a>
+                            </li>
+                            <li>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
+                            </li>
 
-                            </ul>
-                        </li>
-                      <li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="product.html">Products</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a href="careers.html">Careers</a>
-                      </li>
-                      <li>
-                          <a href="contact.html">Contact Us</a>
-                      </li>
-              </div>
-              <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container -->
-      </nav>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -99,100 +99,198 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                
+
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Edtech Engineering</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
-          <div class="row">
+        <div class="row">
+            <h2 id="s2"> Engineering </h2>
+            <hr>
             <div class="col-sm-6">
 
-      <h2 id="es"> Engineering Services </h2>
-      <p id="p7"> Edtech Marine Services provides all types of vessels to repair.</p>
+                <h2 id="g1" style="color: blue"> Engineering Services </h2>
+                <p id="p7"> Edtech Marine Services provides all types of vessels to repair.</p>
 
-      <ul>
-        <li style="font-size:14px">Afloat repairs at Anchorage, OPL and in port </li>
-        <li style="font-size:14px">Repairs at Shipyard </li>
-        <li style="font-size:14px">Voyage repairs </li>
+                <ul>
+                    <li style="font-size:14px">Afloat repairs at Anchorage, OPL and in port </li>
+                    <li style="font-size:14px">Repairs at Shipyard </li>
+                    <li style="font-size:14px">Voyage repairs </li>
 
-</ul>
+                </ul>
 
 
-<h2 id="es"> Services </h2>
-<ul>
-  <li style="font-size:14px">	Steel Structural Repairs and Scaffolding.  </li>
-  <li style="font-size:14px">Fabrication of Platforms and Ladders </li>
-  <li style="font-size:14px">Spooling Shafts and Spooling Tongue </li>
-  <li style="font-size:14px">Metal Spray on Shafts OD and ID of End Covers </li>
-  <li style="font-size:14px">Winch Shafts and Winch Drums</li>
-  <li style="font-size:14px">Gears (Helical, Spiral, Bevel and Sprockets) </li>
-  <li style="font-size:14px">Compressor and Pump overhauling.</li>
-  <li style="font-size:14px">Pipeline Renewals, Fabrication and Repairs.</li>
-  <li style="font-size:14px">Mechanical Repairs </li>
-  <li style="font-size:14px">Tank Cleaning and De-slopping/ Under-water hull cleaning and videography. </li>
-  <li style="font-size:14px">Boiler Repairs and Re-tubing. </li>
-  <li style="font-size:14px">Electrical Repairs and Motor Rewinding. </li>
-  <li style="font-size:14px">Reconditioning Hydraulic and Pneumatic Valves. </li>
-  <li style="font-size:14px">Repair and Servicing of Hydraulic Pumps and Motors Overhauling.  </li>
-  <li style="font-size:14px">Winches and Windlass Repairs. </li>
-  <li style="font-size:14px">Cargo Cranes and Gantries Repairs. </li>
-  <li style="font-size:14px">Hydro Blasting and Tank Coatings</li>
-  <li style="font-size:14px">Winches and Windlass Repairs. </li>
-  <li style="font-size:14px">Fabrication and Installation of Anti-Piracy Measures. </li>
-  <li style="font-size:14px">Pressurized Vessel Repairs. </li>
-  <li style="font-size:14px">Installing and Alignment of Pump Room Machinery.  </li>
-  <li style="font-size:14px">Turbo Charger Repair and Balancing. </li>
+                <h2 id="g2" style="color: blue"> Services </h2>
+                <ul>
+                    <li style="font-size:14px"> Steel Structural Repairs and Scaffolding. </li>
+                    <li style="font-size:14px">Fabrication of Platforms and Ladders </li>
+                    <li style="font-size:14px">Spooling Shafts and Spooling Tongue </li>
+                    <li style="font-size:14px">Metal Spray on Shafts OD and ID of End Covers </li>
+                    <li style="font-size:14px">Winch Shafts and Winch Drums</li>
+                    <li style="font-size:14px">Gears (Helical, Spiral, Bevel and Sprockets) </li>
+                    <li style="font-size:14px">Compressor and Pump overhauling.</li>
+                    <li style="font-size:14px">Pipeline Renewals, Fabrication and Repairs.</li>
+                    <li style="font-size:14px">Mechanical Repairs </li>
+                    <li style="font-size:14px">Tank Cleaning and De-slopping/ Under-water hull cleaning and videography. </li>
+                    <li style="font-size:14px">Boiler Repairs and Re-tubing. </li>
+                    <li style="font-size:14px">Electrical Repairs and Motor Rewinding. </li>
+                    <li style="font-size:14px">Reconditioning Hydraulic and Pneumatic Valves. </li>
+                    <li style="font-size:14px">Repair and Servicing of Hydraulic Pumps and Motors Overhauling. </li>
+                    <li style="font-size:14px">Winches and Windlass Repairs. </li>
+                    <li style="font-size:14px">Cargo Cranes and Gantries Repairs. </li>
+                    <li style="font-size:14px">Hydro Blasting and Tank Coatings</li>
+                    <li style="font-size:14px">Winches and Windlass Repairs. </li>
+                    <li style="font-size:14px">Fabrication and Installation of Anti-Piracy Measures. </li>
+                    <li style="font-size:14px">Pressurized Vessel Repairs. </li>
+                    <li style="font-size:14px">Installing and Alignment of Pump Room Machinery. </li>
+                    <li style="font-size:14px">Turbo Charger Repair and Balancing. </li>
 
-</ul>
+                </ul>
 
             </div>
 
             <div class="col-sm-6">
-               <div class="engg-img">
-                <div class="enginerring-images">
-                  <a target="_blank" href="images/Spooling Shaft.jpg">
-                    <img src="images/Spooling Shaft.jpg" alt="Trolltunga Norway" width="288" height="200">
-                  </a>
-                </div>
+                <div class="engg-img">
+                    <div class="enginerring-images">
+                        <a target="_blank" href="images/Spooling Shaft.jpg">
+                            <img id="im1" src="images/Spooling Shaft.jpg" alt="Trolltunga Norway" width="288" height="200">
+                        </a>
+                    </div>
 
-                <div class="enginerring-images">
-                  <a target="_blank" href="images/Motor Shaft alignment.jpg">
-                    <img src="images/Motor Shaft alignment.jpg" alt="Trolltunga Norway" width="288" height="200">
-                  </a>
-                </div>
+                    <div class="enginerring-images">
+                        <a target="_blank" href="images/Motor Shaft alignment.jpg">
+                            <img id="im2" src="images/Motor Shaft alignment.jpg" alt="Trolltunga Norway" width="288" height="200">
+                        </a>
+                    </div>
 
-                <div class="enginerring-images">
-                  <a target="_blank" href="images/vl_engine.jpg">
-                    <img src="images/vl_engine.jpg" alt="Trolltunga Norway" width="288" height="200">
-                  </a>
+                    <div class="enginerring-images">
+                        <a target="_blank" href="images/vl_engine.jpg">
+                            <img id="im3" src="images/vl_engine.jpg" alt="Trolltunga Norway" width="288" height="200">
+                        </a>
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
         <div class="row">
-<div class="col-lg-12">
+            <div class="col-lg-12">
 
-  <h2 id="es" > Major Repairs, Fabrication & Conversions: </h2>
+                <h2 id="g3" style="color: blue"> Major Repairs, Fabrication & Conversions </h2>
 
-  <p id="p7"> Edtech Marine can arrange major repairs, modifications and conversions. Edtech Marine can provide engineers,
-    supervisors and all types of repairs<br> squad to undertake any type of voyage repairs / services on the vessel.</p>
+                <p id="p7"> Edtech Marine can arrange major repairs, modifications and conversions. Edtech Marine can provide engineers, supervisors and all types of repairs squad to undertake any type of voyage repairs / services on the vessel.</p>
 
-    <h2 id="es" > Superintendence Supervision:</h2>
-    <p id="p7">Edtech Marine can arrange for Engineering & Marine Superintendent to supervise & act as owner's representative
-      for any shipping related activity.  </p>
+                <h2 id="g4" style="color: blue"> Superintendence Supervision </h2>
+                <p id="p7">Edtech Marine can arrange for Engineering & Marine Superintendent to supervise & act as owner's representative for any shipping related activity. </p>
 
-  <h2 id="es" >Slop Disposal by Authorised Agencies: </h2>
-  <p id="p7">Government approved slop/Bilge water disposal can be arranged. Edtech Marine undertakes tank cleaning works & disposal of sludge.
-    </p>
+                <h2 id="g5" style="color: blue">Slop Disposal by Authorised Agencies </h2>
+                <p id="p7">Government approved slop/Bilge water disposal can be arranged. Edtech Marine undertakes tank cleaning works & disposal of sludge.
+                </p>
 
 
-</div>
+            </div>
         </div>
-      </div>
+    </div>
+
+    <hr>
+
+    <div class="container-fluid" id="c2">
+        <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
+
+        <div class="row color-blue">
+
+            <!-- <div class="col-lg-12">
+                        <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                   </div> -->
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+            </div>
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
+                    <br>SUPPLY </p>
+                <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
+                    <br>SERVICES </p>
+                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+            </div>
+
+
+
+
+            <!-- <div class="col-md-6">
+                       <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                   </div> -->
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2016</p>
+            </div>
+        </div>
+    </footer>
+
+    </div>
 
     <!-- /.container -->
 
@@ -200,7 +298,7 @@
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
