--- a/spares.html
+++ b/spares.html
@@ -48,9 +48,9 @@
                       <span class="icon-bar"></span>
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
 
-                   <!-- <img src="logo.png" alt="image1" id="logo"> -->
+
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -106,7 +106,7 @@
             <div class="col-lg-12">
 
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Stores and Spares</li>
                 </ol>
@@ -120,7 +120,11 @@
                 <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
             </div>
             <div class="col-md-12">
-<h2 id="es"> General Ship Supply</h2>
+
+<h2 id="s2"> Stores & Spares </h2>
+
+<hr>
+<h2 id="s1"> General Ship Supply</h2>
 <h3 id="es1" style="color: blue"  style="font-size: 23px"> Bonded Stores </h3>
 <p>We supply a range of Bonded Stores such as Imported Beer, Cigarettes & Tobaccoes,
   Imported spirits/Liqueur and Soft drinks. We also provide sweets, chocolates and snacks. </p>
@@ -160,88 +164,122 @@
 <h3 id="es1" style="color: blue"  style="font-size: 23px"> Ship Spares</h3>
 <p>The range of Engines and Equipment for which we supply include the following: </p>
 
-<ul>
-  <li style="font-size: 17px"> Alpha Laval	</li>
-<li style="font-size: 17px">	Akasaka
-	</li>
-<li style="font-size: 17px">Atlas Copco
-	</li>
-<li style="font-size: 17px"> Boiler Spares
-	</li>
-<li style="font-size: 17px"> BBC-VTR
-	</li>
-<li style="font-size: 17px">Catterpillar
-	</li>
-<li style="font-size: 17px"> Carreir
-	</li>
-<li style="font-size: 17px"> Cummins
-	</li>
-<li style="font-size: 17px"> Daihatsu
-	</li>
-<li style="font-size: 17px"> 	Daikin
-	</li>
-<li style="font-size: 17px"> Doosan
-</li>
-<li style="font-size: 17px"> Duetz
-	</li>
-<li style="font-size: 17px"> 	Hatlapa
-	</li>
-<li style="font-size: 17px"> 	Hanshin
-	</li>
-<li style="font-size: 17px"> Hamworthy
-	</li>
-<li style="font-size: 17px"> 	Holset
-	</li>
-<li style="font-size: 17px"> Man B&W
-	</li>
-<li style="font-size: 17px"> 	MAK
-	</li>
-<li style="font-size: 17px"> 	Matsubara
-	</li>
-<li style="font-size: 17px"> 	Mirrlees
-	</li>
-<li style="font-size: 17px"> Mitsubishi
-	</li>
-<li style="font-size: 17px"> 	MTU
-	</li>
-<li style="font-size: 17px"> 	Napier
-	</li>
-<li style="font-size: 17px"> Nigata
-	</li>
-<li style="font-size: 17px"> 	Pielstick
-	</li>
-<li style="font-size: 17px"> Sabroe
-	</li>
-<li style="font-size: 17px"> 	Sulzer
-	</li>
-<li style="font-size: 17px"> 	Sperre
-	</li>
-<li style="font-size: 17px"> Tanabe
-	</li>
-<li style="font-size: 17px"> Volvo-Penta
-	</li>
-<li style="font-size: 17px"> 	Westfalia
-	</li>
 
-  <li style="font-size: 17px"> 	Yanmar
 
+
+<div class="col-md-2">
+  <ul>
+    <li style="font-size: 17px"> Alpha Laval	</li>
+  <li style="font-size: 17px">	Akasaka
   	</li>
+  <li style="font-size: 17px">Atlas Copco
+  	</li>
+  <li style="font-size: 17px"> Boiler Spares
+  	</li>
+  <li style="font-size: 17px"> BBC-VTR
+  	</li>
+  <li style="font-size: 17px">Catterpillar
+  	</li>
+  <li style="font-size: 17px"> Carreir
+  	</li>
+  <li style="font-size: 17px"> Cummins
+  	</li>
+  <li style="font-size: 17px"> Daihatsu
+  	</li>
+  <li style="font-size: 17px"> 	Daikin
+  	</li>
+  <li style="font-size: 17px"> Doosan
+  </li>
+  <li style="font-size: 17px"> Duetz
+  	</li>
+  <li style="font-size: 17px"> 	Hatlapa
+  	</li>
+  <li style="font-size: 17px"> 	Hanshin
+  	</li>
+    <li style="font-size: 17px"> 	Westfalia
+      </li>
 
+      <li style="font-size: 17px"> 	Yanmar
+
+        </li>
+
+
+  </ul>
 </div>
 
-<div class="col-md-4">
+
+<div class="col-md-2">
+  <ul>
+    <li style="font-size: 17px"> Hamworthy
+    	</li>
+    <li style="font-size: 17px"> 	Holset
+    	</li>
+    <li style="font-size: 17px"> Man B&W
+    	</li>
+    <li style="font-size: 17px"> 	MAK
+    	</li>
+    <li style="font-size: 17px"> 	Matsubara
+    	</li>
+    <li style="font-size: 17px"> 	Mirrlees
+    	</li>
+    <li style="font-size: 17px"> Mitsubishi
+    	</li>
+    <li style="font-size: 17px"> 	MTU
+    	</li>
+    <li style="font-size: 17px"> 	Napier
+    	</li>
+    <li style="font-size: 17px"> Nigata
+    	</li>
+    <li style="font-size: 17px"> 	Pielstick
+    	</li>
+    <li style="font-size: 17px"> Sabroe
+    	</li>
+      <li style="font-size: 17px"> 	Sulzer
+      	</li>
+      <li style="font-size: 17px"> 	Sperre
+      	</li>
+      <li style="font-size: 17px"> Tanabe
+      	</li>
+      <li style="font-size: 17px"> Volvo-Penta
+      	</li>
+
+
+
+
+  </ul>
+</div>
+
+
+
+
+
+
+
+
+    <div class="col-md-4">
 
 
 <div class="images">
-  <a target="_blank" href="images/FNC.jpg">
-    <img src="images/FNC.jpg" alt="Forest2" class="img-responsive">
+  <a target="_blank" href="images/spares.jpg">
+    <img src="images/spares.jpg" alt="Forest2" class="img-responsive">
   </a>
-  <div class="desc"><b>Fire Nozzles <br> & Couplings</b></div>
+
 </div>
+</div>
+
+  <div class="col-md-4">
+<div class="images">
+  <a target="_blank" href="images/distr.jpg">
+    <img src="images/distr.jpg" alt="Forest2" class="img-responsive">
+  </a>
 
 </div>
 
+
 </div>
+<!-- </div>
+</div>
+</div> -->
 
 
 
@@ -249,6 +287,102 @@
 
             </div>
         </div>
+
+        <div class="container-fluid" id="c2">
+         <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
+
+          <div class="row color-blue">
+
+                      <!-- <div class="col-lg-12">
+                          <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                     </div> -->
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                        <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+                     </div>
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                        <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                     </div>
+
+
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                        <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+                     </div>
+
+
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                        <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                        <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                     </div>
+
+
+
+
+                     <!-- <div class="col-md-6">
+                         <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                     </div> -->
+                 </div>
+                 </div>
+
+<!-- footer -->
+                 <footer>
+                     <div class="row">
+                         <div class="col-lg-12">
+                             <p>Copyright &copy; Your Website 2016</p>
+                         </div>
+                     </div>
+                 </footer>
+
+               </div>
+
+
 
 
     <!-- jQuery -->
