--- a/agency.html
+++ b/agency.html
@@ -49,7 +49,7 @@
                       <span class="icon-bar"></span>
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
 
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
@@ -105,9 +105,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                
+
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Edtech Agency and Husbandry</li>
                 </ol>
@@ -120,6 +120,8 @@
 
             </div>
             <div class="col-md-12">
+              <h2 id="s2"> Agency & Husbandry </h2>
+              <hr>
               <p> Singapore is the world’s busiest port where approximately 50,000 vessels pass through
                 every year. Many owners and charterers find it convenient to receive spares and stores, carry out
                 crew changes and receive Cash to Master (CTM) while passing through Singapore. </p>
@@ -156,28 +158,106 @@
   in Singapore, ensuring that client’s needs are given <br> preference. </p>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
         </div>
+
+
+        <hr>
+            <div class="container-fluid" id="c2">
+             <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+            <!-- </div> -->
+
+              <div class="row color-blue">
+
+                          <!-- <div class="col-lg-12">
+                              <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                         </div> -->
+                         <div class="col-md-3">
+                             <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                            <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                            <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                            <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                            <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                            <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                            <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                            <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+                         </div>
+
+
+                         <div class="col-md-3">
+                             <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                            <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                            <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                            <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                            <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                            <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                            <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                            <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                         </div>
+
+
+
+
+                         <div class="col-md-3">
+                             <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                            <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                            <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                            <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                            <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+                         </div>
+
+
+
+
+                         <div class="col-md-3">
+                             <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                            <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                            <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                            <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                            <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                            <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                            <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                            <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                         </div>
+
+
+
+
+                         <!-- <div class="col-md-6">
+                             <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                         </div> -->
+                     </div>
+                     </div>
+
+                     <!-- Footer -->
+                     <footer>
+                         <div class="row">
+                             <div class="col-lg-12">
+                                 <p>Copyright &copy; Your Website 2016</p>
+                             </div>
+                         </div>
+                     </footer>
+
+                   </div>
+
+
 
 
     <!-- jQuery -->
