--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -103,9 +103,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-              
+
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Contact Us</li>
                 </ol>
@@ -124,16 +124,17 @@
             <div class="col-md-4">
                 <h3>Contact Details</h3>
                 <p>
-                  5 SOON LEE STREET<br>
-#06-22 POINEER POINT<br>
-Singapore 627607<br>
+                    5 SOON LEE STREET
+                    <br> #06-22 POINEER POINT
+                    <br> Singapore 627607
+                    <br>
                 </p>
                 <p><i class="fa fa-phone"></i>
                     <abbr title="Tel">Tel</abbr>: +65 6397 5980</p>
-                    <p><i class="fa fa-phone"></i>
-                        <abbr title="Mobile">Mob</abbr>:  +65 9828 9531</p>
-                        <p><i class="fa fa-phone"></i>
-                            <abbr title="Fax">Fax</abbr>:   +65 6397 5981</p>
+                <p><i class="fa fa-phone"></i>
+                    <abbr title="Mobile">Mob</abbr>: +65 9828 9531</p>
+                <p><i class="fa fa-phone"></i>
+                    <abbr title="Fax">Fax</abbr>: +65 6397 5981</p>
                 <p><i class="fa fa-envelope-o"></i>
                     <abbr title="Email">Email</abbr>: <a href="mailto:name@example.co">info@edtech.com.sg</a>
                 </p>
@@ -195,18 +196,105 @@ Singapore 627607<br>
             </div>
 
         </div>
-        <!-- /.row -->
+    </div>
+    <!-- /.row -->
 
-        <hr>
+    <hr>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2016</p>
-                </div>
+    <!-- Footer -->
+    <div class="container-fluid" id="c2">
+        <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
+
+        <div class="row color-blue">
+
+            <!-- <div class="col-lg-12">
+                          <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                     </div> -->
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
             </div>
-        </footer>
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
+                    <br>SUPPLY </p>
+                <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
+                    <br>SERVICES </p>
+                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+            </div>
+
+
+
+
+            <!-- <div class="col-md-6">
+                         <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                     </div> -->
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2016</p>
+            </div>
+        </div>
+    </footer>
 
     </div>
     <!-- /.container -->
