--- a/index.html
+++ b/index.html
@@ -142,22 +142,29 @@
     </header>
 
     <!-- Page Content -->
+ <div class="container-fluid" id="c1">
+  <h2 class="page-header" style="color:white"><b>Welcome to Edtech Marine Services</b></h2>
+</div>
+
+
+
     <div class="container">
 
 
 
         <!-- Portfolio Section -->
         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header" style="color: #0033cc"><b>Welcome to Edtech Marine Services</b></h2>
-            </div>
+            <!-- <div class="col-lg-12">
+                <h2 class="page-header" id="ph1" style="color:white"><b>Welcome to Edtech Marine Services</b></h2>
+            </div> -->
+
             <div class="col-md-4 col-sm-6">
                 <title>  About Us
                </title>
 
                <h2><b>About Us</b> </h2>
 
-                    <img id="i1" class="img-circle img-portfolio img-hover" src="images/logo black.png" alt="" width="350" height="300">
+                    <img id="i1" class="img-circle img-portfolio img-hover" src="images/edtech.jpg" alt="" width="350" height="300">
 
                 <!-- </a> -->
 
@@ -166,7 +173,7 @@
             <div class="col-md-4 col-sm-6">
               <h2><b> Products </b></h2>
                 <!-- <a href="product.html"> Continue Reading -->
-                    <img  id="i1"class="img-circle img-portfolio img-hover" src="images/Products.jpg" alt="" width="350" height="300">
+                    <img  id="i1"class="img-circle img-portfolio img-hover" src="images/safety_equipment.jpg" alt="" width="350" height="300">
                 <!-- </a> -->
             </div>
             <div class="col-md-4 col-sm-6">
@@ -195,6 +202,7 @@
         </div>---->
 
 
+<hr id="head" width="70%">
 
         <div class="row">
           <div class="col-lg-12">
@@ -210,25 +218,25 @@
           <div class="col-md-12">
             <div class="images">
          <a target="_blank" href="images/tn1.jpg" >
-            <img src="images/tn1.jpg" alt="Fjords" class="img-responsive" >
+            <img src="images/tn1.jpg" alt="Fjords" class="img-responsive"  width="170" height="100">
          </a>
 
         </div>
         <div class="images">
           <a target="_blank" href="images/bsafei.jpg">
-            <img  src="images/bsafei.jpg" alt="Forest1" class="img-responsive" >
+            <img  src="images/bsafei.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
           </a>
 
         </div>
         <div class="images">
      <a target="_blank" href="images/fghjty.png" >
-        <img src="images/fghjty.png" alt="Fjords" class="img-responsive" >
+        <img src="images/fghjty.png" alt="Fjords" class="img-responsive" width="170" height="100">
      </a>
 
     </div>
     <div class="images">
       <a target="_blank" href="images/bscic.jpg">
-        <img  src="images/bscic.jpg" alt="Forest1" class="img-responsive" >
+        <img  src="images/bscic.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
       </a>
 
     </div>
@@ -262,6 +270,18 @@
 
 </div>
 
+<div class="images brand-img">
+<a target="_blank" href="images/ningo.jpg" >
+<img src="images/ningo.jpg" alt="Fjords" class="img-responsive" >
+</a>
+
+</div>
+
+<div class="images brand-img">
+<a target="_blank" href="images/bcb_logo.jpg" >
+<img src="images/bcb_logo.jpg" alt="Fjords" class="img-responsive" >
+</a>
+
 </div>
 
 
@@ -270,66 +290,103 @@
 
 
 
-        <!-- <div class="row">
-
-
-          <div class="col-md-2">
-            <div class="images">
-         <a target="_blank" href="images/fghjty.png" >
-            <img src="images/fghjty.png" alt="Fjords" class="img-responsive" >
-         </a>
-
-        </div>
-
-
-        </div>
-
-          <div class="col-md-2">
-        <div class="images">
-          <a target="_blank" href="images/bscic.jpg">
-            <img  src="images/bscic.jpg" alt="Forest1" class="img-responsive" >
-          </a>
-
-        </div>
-        </div>
-
-
-
-
-        </div> -->
-
-
 </div>
 
 
 
 
+</div>
+</div>
+
+<div class-"container-fluid" id="c3">
+
+</div>
+<hr id="head" width="70%">
+
+<div class="container-fluid" id="c2">
+ <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+<!-- </div> -->
+
+  <div class="row color-blue">
+
+              <!-- <div class="col-lg-12">
+                  <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+             </div> -->
+             <div class="col-md-3">
+                 <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
 
-        <div class="row">
-             <div class="col-lg-12">
-                 <h2 class="page-header">Contact Us</h2>
+
              </div>
-             <div class="col-md-6">
-                 <p>The Modern Business template by Start Bootstrap includes:</p>
-                 <ul>
-                     <li><strong>Bootstrap v3.2.0</strong>
-                     </li>
-                     <li>jQuery v1.11.0</li>
-                     <li>Font Awesome v4.1.0</li>
-                     <li>Working PHP contact form with validation</li>
-                     <li>Unstyled page elements for easy customization</li>
-                     <li>17 HTML pages</li>
-                 </ul>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+
+
+             <div class="col-md-3">
+                 <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
              </div>
-             <div class="col-md-6">
+
+
+
+
+             <div class="col-md-3">
+                 <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+             </div>
+
+
+
+
+             <div class="col-md-3">
+                 <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+             </div>
+
+
+
+
+             <!-- <div class="col-md-6">
                  <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-             </div>
+             </div> -->
+         </div>
          </div>
 
-        <hr>
+
 
         <!-- Footer -->
         <footer>
