--- a/itservices.html
+++ b/itservices.html
@@ -47,7 +47,7 @@
                       <span class="icon-bar"></span>
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,9 +100,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-              
+
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Edtech I.T Services</li>
                 </ol>
@@ -112,13 +112,15 @@
 </nav>
         <!-- Intro Content -->
         <div class="row">
+          <h2 id="s2"> I.T Services </h2>
+          <hr>
             <!---<div class="col-md-6">
                 <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
             </div>
             <div class="col-md-6">
 
-<h2 id="es"> On Board IT troubleshooting </h2>
-  <hr id="hr2" width="120%" >
+              <h2 id="s1"> On Board IT troubleshooting </h2>
+
   <p style="font-size:21px"> The complexity of having IT onboard vessels in remote locations with poor connections, is complex.
     Most IT supporters outside <br>the maritime industry would be surprised to see the challenges when supporting IT
     onboard vessels. Issues which are easily <br>solved in a normal environment suddenly becomes difficult due to the obstacles
