--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
                       <span class="icon-bar"></span>
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,14 +100,14 @@
             <div class="col-lg-12">
 
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Products</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
-</nav>
+<!-- </nav> -->
         <!-- Intro Content -->
 
 
@@ -466,6 +466,7 @@
 
 
 
+
     <hr id="hr1" width="50%" >
 
     <div class="row">
@@ -532,7 +533,7 @@
 
 </div>
 
-  <div class="col-md-4">
+<div class="col-md-4">
 <div class="images">
   <a target="_blank" href="images/fireman axe.jpg">
     <img  src="images/fireman axe.jpg" alt="Forest1" class="img-responsive" >
@@ -540,38 +541,28 @@
   <div class="desc"><b>Fireman Axe</b></div>
 </div>
 </div>
-
-
-
 <div class="col-md-4">
-
-
 <div class="images">
   <a target="_blank" href="images/fireman suits.jpg">
     <img src="images/fireman suits.jpg" alt="Forest2" class="img-responsive">
   </a>
   <div class="desc"><b>Fireman Suits</b></div>
 </div>
-
 </div>
-
 </div>
 
 <!-- row 3 -->
 <div class="row">
-  <div class="col-md-4">
-
-    <div class="images">
+<div class="col-md-4">
+<div class="images">
  <a target="_blank" href="images/PFA.jpg">
     <img src="images/PFA.jpg" alt="Fjords" class="img-responsive">
  </a>
  <div class="desc"><b>Portable Foam<br> Applicator</b></div>
 </div>
-
-
 </div>
 
-  <div class="col-md-4">
+<div class="col-md-4">
 <div class="images">
   <a target="_blank" href="images/firehose.jpg">
     <img  src="images/firehose.jpg" alt="Forest1" class="img-responsive" >
@@ -580,11 +571,7 @@
 </div>
 </div>
 
-
-
 <div class="col-md-4">
-
-
 <div class="images">
   <a target="_blank" href="images/FNC.jpg">
     <img src="images/FNC.jpg" alt="Forest2" class="img-responsive">
@@ -594,192 +581,113 @@
 
 </div>
 
+</div> </div>
+                   </div>
+
 </div>
 
 
+        <!-- /.row -->
+
+
+
+<hr>
+
+    <div class="container-fluid" id="c2">
+     <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+    <!-- </div> -->
+
+      <div class="row color-blue">
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
 
 
+                 </div>
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                    <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                    <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
 
 
 
 
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                    <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
 
 
 
 
+                 </div>
+
+
+
+
+                 <div class="col-md-3">
+                     <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                    <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                    <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                    <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                    <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                    <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                    <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                    <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                 </div>
+
+
+
+
+                 <!-- <div class="col-md-6">
+                     <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                 </div> -->
+             </div>
+             </div>
+           </div>
+
+             <!-- Footer -->
+             <footer>
+                 <div class="row">
+                     <div class="col-lg-12">
+                         <p>Copyright &copy; Your Website 2016</p>
                      </div>
-                   </div>
+                 </div>
+             </footer>
+
+           </div>
 
 
 
 
-        <!-- /.row -->
-
-        <!-- Team Members -->
-    <!---    <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
-                  <!---  <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>--->
-          <!---  <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>--->
-        <!---    <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>--->
-          <!---  <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>---->
-          <!---  <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        <!---    <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>--->
-        <!-- /.row -->
-
-        <!-- Our Customers -->
-        <!---<div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Customers</h2>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-        </div>
-        <!-- /.row -->
-
-  <!--      <hr>--->
-
-        <!-- Footer -->
-      <!--  <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>--->
-    <!-- /.container -->
-
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
