--- a/safety.html
+++ b/safety.html
@@ -47,7 +47,7 @@
                       <span class="icon-bar"></span>
                   </button>
                   <a href="#" class="navbar-left"><img src="images/logo_new.png" alt="image1" id="logo1"></a>
-                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE (S) PTE LTD</b></a>
+                  <a class="navbar-brand" href="index.html"><b>EDTECH MARINE </b></a>
                    <!-- <img src="logo.png" alt="image1" id="logo"> -->
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -104,7 +104,7 @@
             <div class="col-lg-12">
 
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html" style="color: black">Home</a>
                     </li>
                     <li class="active">Edtech Safety and Automation</li>
                 </ol>
@@ -114,14 +114,16 @@
 </nav>
         <!-- Intro Content -->
         <div class="row">
+          <h2 id="s2"> Safety & Automation </h2>
+          <hr>
             <!---<div class="col-md-6">
                 <!---<img class="img-responsive" src="http://placehold.it/750x450" alt="">--->
 
             <div class="col-md-6">
 
 
-<h2 id="es"> Edtech Safety & Automation  </h2>
-<hr id="hr2" width="120%">
+
+
 <h3 id="es1" style="color: blue"  style="font-size: 23px"> Life Saving Appliances Servicing : </h3>
 <p> Edtech Marine provides servicing of Life Saving Appliances (LSA), by Authorized representatives.</p>
 <ol>
@@ -174,7 +176,7 @@
 </div>
 </div>
 </div>
-<hr id="hr2" width="120%">
+<!-- <hr id="hr2" width="120%"> -->
 <h3 id="es1" style="color: blue"  style="font-size: 23px"> Fire Fighting Appliances Servicing : </h3>
 <ol>
   <li style="font-size: 17px">	Galley Wet Chemical System:( Annual servicing, Repair & Replacement.)
@@ -229,7 +231,8 @@
 </div>
 
 
-  <hr id="hr2" width="120%">
+  <!-- <hr id="hr2" width="120%"> -->
+
 
 <h3 id="es1" style="color: blue"  style="font-size: 23px"> Calibration & Servicing of Gas Monitoring Systems: </h3>
 <p>Edtech Marine provides Annual calibration of all Products related to Automation Engineering. All makes &
@@ -295,6 +298,103 @@
 
             </div>
         </div>
+
+ <hr>
+
+
+        <div class="container-fluid" id="c2">
+         <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
+
+          <div class="row color-blue">
+
+                      <!-- <div class="col-lg-12">
+                          <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                     </div> -->
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+                        <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+
+
+                     </div>
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+                        <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
+
+
+                        <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
+
+
+                     </div>
+
+
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                        <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
+
+
+
+
+                     </div>
+
+
+
+
+                     <div class="col-md-3">
+                         <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
+                        <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+                        <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
+                        <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
+                        <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
+
+                        <p style="font-size: 16px; color: white"> 1.Mr Jagjit Singh, Director</p>
+                        <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
+                        <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
+
+
+                     </div>
+
+
+
+
+                     <!-- <div class="col-md-6">
+                         <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                     </div> -->
+                 </div>
+                 </div>
+
+                 <!-- Footer -->
+                 <footer>
+                     <div class="row">
+                         <div class="col-lg-12">
+                             <p>Copyright &copy; Your Website 2016</p>
+                         </div>
+                     </div>
+                 </footer>
+
+               </div>
 
 
     <!-- jQuery -->
